Update 'chfu2za2h-java-springboot' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-e33ba0e591.xd8o.p3.openshiftapps.com/rhtap/rhtap-qe-java-springboot:6b72168dbbab97e4ae8b4b1b8d614a818b262487@sha256:f8416fc30c1072da0bb5ebf9653e9cf1379293ceb324e77780a3c937ee7046b6

--- a/components/chfu2za2h-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/chfu2za2h-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: chfu2za2h-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-e33ba0e591.xd8o.p3.openshiftapps.com/rhtap/rhtap-qe-java-springboot:6b72168dbbab97e4ae8b4b1b8d614a818b262487@sha256:f8416fc30c1072da0bb5ebf9653e9cf1379293ceb324e77780a3c937ee7046b6
+          name: container-image
